# AI-OPS

./: .flake8  .gitignore  Dockerfile  GITHUB_ACTIONS_SETUP.md  README.md  WORKFLOW_FIXES.md  allure.properties  docker-compose.yml  project.toml  pylintrc  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/workflows/: basic-ci.yml  build.yml  code-quality.yml  test-and-reports.yml
Forecasting/: README.md  __init__.py  capacity_forecasting_demo.py
Forecasting/processors/: readme.md
Forecasting/remediation/: readme.md
ai_ops/: README.md  __init__.py  main.py  ragapi.py
ai_ops/collectors/: readme.md
ai_ops/models/: readme.md
examples/: README.md  __init__.py  ai_agent_vs_agentic_ai.py  anomaly_detection_demo.py  capacity_forecasting_demo.py  run_all_examples.py  sentiment_analysis_demo.py  student_prediction_demo.py
scripts/: README.md  __init__.py  generate_environment.py  generate_reports.py  run_tests.py
tests/: readme.md  test_basic.py  test_simple.py  test_smoke.py
