[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ops"
version = "0.1.0"
description = "Common AI-Native Operations toolkit for infrastructure automation and ML insights."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Karthikeya Raja M" }]
dependencies = [
    "typer>=0.9.0",      # For the CLI interface
    "pandas>=2.0.0",     # For data processing
    "scikit-learn>=1.3.0", # For #1 Anomaly Detection
    "joblib>=1.3.0",     # For model persistence and serialization
    "prophet>=1.1.0",    # For #2 Predictive Forecasting
    "networkx>=3.0",     # For #3 Root Cause Analysis
    "boto3>=1.28.0",     # For AWS/Infrastructure actions
    "rich>=13.0.0"       # For professional terminal output
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.5.0",  # For visualization in examples
    "textblob>=0.17.0"    # For sentiment analysis demo
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.2.0",
    "allure-pytest>=2.13.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "bandit[toml]>=1.7.0",
    "safety>=2.3.0"
]

[project.scripts]
aiops = "ai_ops.main:app"

[tool.setuptools]
packages = ["ai_ops"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by # is ignored
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
src_paths = ["ai_ops", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=ai_ops --cov-report=xml --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "smoke: Smoke tests",
    "performance: Performance tests"
]

[tool.coverage.run]
source = ["ai_ops"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "prophet.*", 
    "networkx.*",
    "boto3.*",
    "botocore.*"
]
ignore_missing_imports = true