[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ops"
version = "0.1.0"
description = "Common AI-Native Operations toolkit for infrastructure automation and ML insights."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Karthikeya Raja M" }]
dependencies = [
    "typer>=0.9.0",        # CLI interface
    "pandas>=2.0.0",       # Data processing
    "numpy>=1.21.0",       # Numerical computing
    "scikit-learn>=1.3.0", # Anomaly detection / forecasting
    "joblib>=1.3.0",       # Model persistence
    "rich>=13.0.0"         # Terminal output formatting
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.5.0",
    "textblob>=0.17.0"
]
rag = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyngrok>=7.0.0",
    "nest_asyncio>=1.5.0",
    "python-multipart>=0.0.6",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sqlalchemy>=2.0.0",
    "redis>=4.6.0",
    "pillow>=10.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "slowapi>=0.1.9"
]
agents = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyngrok>=7.0.0",
    "nest_asyncio>=1.5.0",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "deepeval>=0.21.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.2.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0"
]
all = [
    "ai-ops[examples,rag,agents,dev]"
]

[project.scripts]
aiops = "ai_ops.main:main"

[tool.setuptools]
packages = ["ai_ops", "Forecasting"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by # is ignored
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
src_paths = ["ai_ops", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "smoke: marks tests as smoke tests for critical path verification",
    "performance: marks tests as performance benchmarks",
]

[tool.coverage.run]
source = ["ai_ops"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "prophet.*",
    "networkx.*",
    "boto3.*",
    "botocore.*",
    "fastapi.*",
    "uvicorn.*",
    "pyngrok.*",
    "nest_asyncio.*",
    "transformers.*",
    "torch.*",
    "sqlalchemy.*",
    "redis.*",
    "PIL.*",
    "chromadb.*",
    "slowapi.*",
    "langchain_ollama.*",
    "langchain_openai.*",
    "langgraph.*",
    "deepeval.*",
    "google.colab.*"
]
ignore_missing_imports = true